added gulp file

--- a/views/process.mustache
+++ b/views/process.mustache
@@ -54,15 +54,27 @@
 
             <div class="entry clearfix">
              <div class="entry-image">
-               <iframe src="http://player.vimeo.com/video/87701971" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+							 <iframe src="https://player.vimeo.com/video/258502412?title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
              </div>
              <div class="entry-title">
-               <h2 style="color: white">This is a Standard post with an Embedded Video</h2>
+               <h2 style="color: white">Resin Man</h2>
              </div>
              <div class="entry-content">
                <p style="color: white">Asperiores, tenetur, blanditiis, quaerat odit ex exercitationem pariatur quibusdam veritatis quisquam laboriosam esse beatae hic perferendis velit deserunt soluta iste repellendus officia in neque veniam debitis placeat quo unde reprehenderit eum facilis vitae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, reprehenderit!</p>
              </div>
            </div>
+
+					 <div class="entry clearfix">
+						<div class="entry-image">
+						 <iframe src="https://player.vimeo.com/video/258502412?title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+						</div>
+						<div class="entry-title">
+							<h2 style="color: white">Tribute to Ray</h2>
+						</div>
+						<div class="entry-content">
+							<p style="color: white">Asperiores, tenetur, blanditiis, quaerat odit ex exercitationem pariatur quibusdam veritatis quisquam laboriosam esse beatae hic perferendis velit deserunt soluta iste repellendus officia in neque veniam debitis placeat quo unde reprehenderit eum facilis vitae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, reprehenderit!</p>
+						</div>
+					</div>
 					</div><!-- #posts end -->
 
 				</div>
