--- a/views/contact.mustache
+++ b/views/contact.mustache
@@ -15,7 +15,7 @@
 <div id="page-menu" class="no-sticky" style="background: #1b1b1b">
 	<div id="" class='custom-page-banner'style="position: fixed; width: 100%;">
     <div class="container clearfix">
-      <div class="menu-title">Contact <span>Options</span></div>
+      <div class="menu-title"><span>Contact </span></div>
     </div>
   </div>
 </div><!-- #page-menu end -->
