--- a/views/index.mustache
+++ b/views/index.mustache
@@ -60,13 +60,8 @@
 
 	<!-- External JavaScripts
 	============================================= -->
-	<script src="/js/jquery.js"></script>
-	<script src="/js/plugins.js"></script>
-	<script src="/js/custom.js"></script>
+	<script type="text/javascript"src="/build/vendor.min.js"></script>
 
-	<!-- Footer Scripts
-	============================================= -->
-	<script src="/js/functions.js"></script>
 	<!-- <script src='js/navTransition.js'></script> -->
 </body>
 </html>
