added content to process

--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -30,7 +30,7 @@
               {{/ galleries}}
             </ul>
           </li>
-          <!-- <li><a href="index.html"><div class='custom-menu-item'>Shop</div></a> -->
+          <li><a href="index.html"><div class='custom-menu-item'>Shop</div></a>
             <ul class='custom-sub-menu'>
               <li><a class='custom-sub-menu-item' href="index-corporate.html"><div>Prints</div></a></li>
               <li><a class='custom-sub-menu-item' href="index-corporate.html"><div>Art</div></a></li>
