--- a/views/contact.mustache
+++ b/views/contact.mustache
@@ -39,7 +39,7 @@
           <div class="contact-form-result"></div>
 
           <form class="nobottommargin" id="template-contactform" name=
-					"template-contactform" action="/contact" method="post">
+					"template-contactform" action="api/inquiry" method="post">
 
             <div class="form-process"></div>
 
