--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -251,6 +251,11 @@ a {
   background-color: black!important;
 }
 
+.custom-cart{
+  color: white;
+  font-size: 20px !important;
+}
+
 /* ADMIN PAGE */
 .adminTable{
   padding: 0!important;
