--- a/views/shop.mustache
+++ b/views/shop.mustache
@@ -12,7 +12,8 @@
 		<div id="page-menu" class="no-sticky" style="background: #1b1b1b">
 			<div id="" class='custom-page-banner'style="position: fixed; width: 100%;">
 				<div class="container clearfix">
-					<div style="padding-left: 10px;"class="menu-title"><span>shop</span></div>
+					<div style="padding-left: 10px;"class="menu-title" style='width: 100%'><span>shop</span></div>
+					<a href="/cart"><i class="icon-shopping-cart right custom-cart"></i></a>
 				</div>
 			</div>
 		</div>
@@ -29,8 +30,8 @@
 
 						<div class="product clearfix">
 							<div class="product-image">
-								<a href="/shop-single/{{name}}"><img src="art_imgs/2016/nobody.png" alt="Slim Fit Chinos"></a>
-								<a href="/shop-single"><img src="art_imgs/2016/rollit.png" alt="Slim Fit Chinos"></a>
+								<a href="/shop-single/{{name}}"><img src="art_imgs/2016/nobody.png" alt="{{name}}"></a>
+								<a href="/shop-single"><img src="art_imgs/2016/rollit.png" alt="{{name}}"></a>
 								<div class="product-overlay">
 									<a href="#" class="add-to-cart" style="width:100%"><i class="icon-shopping-cart"></i><span> Add to Cart</span></a>
 									<!-- <a href="include/ajax/shop-item.html" class="item-quick-view" data-lightbox="ajax"><i class="icon-zoom-in2"></i><span> Quick View</span></a> -->
@@ -38,23 +39,12 @@
 							</div>
 							<div class="product-desc">
 								<div class="product-title"><h3><a href="#">Nobody print</a></h3></div>
-								<div class="product-price">$39.99</div>
-								<div class="product-rating">
-									<i class="icon-star3"></i>
-									<i class="icon-star3"></i>
-									<i class="icon-star3"></i>
-									<i class="icon-star-half-full"></i>
-									<i class="icon-star-empty"></i>
-								</div>
+								<div class="product-price ">$39.99</div>
 							</div>
 						</div>
-
 					</div><!-- #shop end -->
-
 				</div>
-
 			</div>
-
 		</section><!-- #content end -->
 
     {{> footer }}
