--- a/views/admin.mustache
+++ b/views/admin.mustache
@@ -9,48 +9,58 @@
 	<div id="wrapper" class="clearfix">
 
     {{> nav }}
-		<section id="content" style="overflow: scroll">
-			<div class="content-wrap">
-					<div class="clear"></div>
-					<h1 style="align-self: center;">Add Art to Database</h1>
-          <form action="/api/art" method="POST">
-						<table class='table table-bordered'>
-							<tr>
-								<th class="adminTable">id</th>
-								<th class="adminTable">name</th>
-								<th class="adminTable">image file name</th>
-								<th class="adminTable">gallery name</th>
-								<th class="adminTable">gallery id</th>
-								<th class="adminTable">cover photo?</th>
-								<th class="adminTable">dimensions</th>
-								<th class="adminTable">description</th>
-								<th class="adminTable">for sale?</th>
-								<th class="adminTable">price</th>
-								<th class="adminTable">order</th>
-							</tr>
-							<tr>
-								<td class="adminTable"><input type="number" placeholder='id'name='id'/></td>
-								<td class="adminTable"><input type='text' placeholder='name' name='name' /></td>
-								<td class="adminTable"><input type='text' placeholder='image name' name='imagePath' /></td>
-								<td class="adminTable"><input type='text' placeholder='gallery name' name='galName' /></td>
-								<td class="adminTable"><input type='text' placeholder='gallery ID' name='galId' /></td>
-								<td class="adminTable"><input type='text' placeholder='cover photo?' name='coverPhoto' /></td>
-								<td class="adminTable"><input type='text' placeholder='dimesnions' name='dimensions'  /></td>
-								<td class="adminTable"><input type='text' placeholder='description' name='description' /></td>
-								<td class="adminTable"><input type='text' placeholder='for sale?' name='forsale'  /></td>
-								<td class="adminTable"><input type='text' placeholder='price' name='price' /></td>
-								<td class="adminTable"><input type='number' placeholder='order' name='order' /></td>
-							</tr>
-						</table>
-						<input type='submit' name='art' value='submit' />
+		<section id="content" class="container" style="margin-top: 20px;">
+			<div class="row">
+				<div class='col-md-6'>
+          <form action="/api/art" method="POST" style="padding: 20px; background-color: #f9f9f9; border: 1px solid #999">
+						<h3>Add Art to Database</h3 >
+						<div class="form-group"><input class="form-control" type="number" placeholder='id'name='id'/></div>
+						<div class="form-group"><input class="form-control" type='text' placeholder='name' name='name' /></div>
+						<div class="form-group"><input class="form-control" type='text' placeholder='image name' name='imagePath' /></div>
+						<div class="form-group"><input class="form-control" type='text' placeholder='gallery name' name='galName' /></div>
+						<div class="form-group"><input class="form-control" type='text' placeholder='gallery ID' name='galId' /></div>
+						<div class="form-group"><input class="form-control" type='text' placeholder='cover photo?' name='coverPhoto' /></div>
+						<div class="form-group"><input class="form-control" type='text' placeholder='dimesnions' name='dimensions'  /></div>
+						<div class="form-group"><input class="form-control" type='text' placeholder='description' name='description' /></div>
+						<div class="form-group"><input class="form-control" type='text' placeholder='for sale?' name='forsale'  /></div>
+						<div class="form-group"><input class="form-control" type='text' placeholder='price' name='price' /></div>
+						<div class="form-group"><input class="form-control" type='number' placeholder='order' name='order' /></div>
+						<input class="btn btn-secondary" type='submit' name='art' value='submit' />
 					</form>
-
-				<form action="/api/art" method="GET">
-					<h1>View Database</h1>
-					<input type='submit' />
-				</form>
+				</div>
+				<div class="col-md-6">
+					<form action="/api/art" method="GET" style="padding: 20px; background-color: #f9f9f9; border: 1px solid #999">
+						<h3>View Art Database</h3>
+						<input class='btn btn-secondary' type='submit' />
+					</form>
+				</div>
 			</div>
-		</section>
+			<div class="row">
+				<div class="col-md-6" style="border-right: 1px solid #999">
+					<form action="api/prints" method="POST" style="padding: 20px; background-color: #f9f9f9; border: 1px solid #999">
+						<h3>Add a print to the database</h3>
+						<div class='form-group'><input class='form-control' name="name"type='text' placeholder='name'  /></div>
+						<div class='form-group'><input class='form-control' name="dimensions"type='text' placeholder='dimensions'  /></div>
+						<div class='form-group'><input class='form-control' name="description"type='text' placeholder='description'  /></div>
+						<div class='form-group'><input class='form-control' name="price1"type='text' placeholder='price1'  /></div>
+						<div class='form-group'><input class='form-control' name="price2"type='text' placeholder='price2'  /></div>
+						<div class='form-group'><input class='form-control' name="price3"type='text' placeholder='price3'  /></div>
+						<div class='form-group'><input class='form-control' name="amountLeft"type='text' placeholder='amount left'  /></div>
+						<div class='form-group'><input class='form-control' name="amount"type='text' placeholder='total amount'  /></div>
+						<div class='form-group'><input class='form-control' name="galleryName"type='text' placeholder='gallery name'  /></div>
+						<div class='form-group'><input class='form-control' name="image1"type='text' placeholder='image1'  /></div>
+						<div class='form-group'><input class='form-control' name="image2"type='text' placeholder='image2'  /></div>
+						<input class="btn btn-secondary" type='submit' name='prints' value='submit' />
+					</form>
+				</div>
+				<div class="col-md-6">
+					<form action="api/prints" method="GET" style="padding: 20px; background-color: #f9f9f9; border: 1px solid #999">
+						<h3>View prints databas</h3>
+						<input class='btn btn-secondary' type='submit' />
+					</form>
+				</div>
+			</div>
+</section>
     {{> footer }}
 	</div><!-- #wrapper end -->
 
