integrated prints into shop

--- a/views/admin.mustache
+++ b/views/admin.mustache
@@ -36,7 +36,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6" style="border-right: 1px solid #999">
+				<div class="col-md-6">
 					<form action="api/prints" method="POST" style="padding: 20px; background-color: #f9f9f9; border: 1px solid #999">
 						<h3>Add a print to the database</h3>
 						<div class='form-group'><input class='form-control' name="name"type='text' placeholder='name'  /></div>
@@ -55,7 +55,7 @@
 				</div>
 				<div class="col-md-6">
 					<form action="api/prints" method="GET" style="padding: 20px; background-color: #f9f9f9; border: 1px solid #999">
-						<h3>View prints databas</h3>
+						<h3>View prints database</h3>
 						<input class='btn btn-secondary' type='submit' />
 					</form>
 				</div>
