added individual product page

--- a/views/shop.mustache
+++ b/views/shop.mustache
@@ -30,10 +30,10 @@
 					{{#prints}}
 						<div class="product clearfix">
 							<div class="product-image">
-								<a href="/shop-single/{{name}}"><img src="/art_imgs/prints/{{image1}}" alt="{{name}}"></a>
+								<a href="/shop-item/{{name}}"><img src="/art_imgs/prints/{{image1}}" alt="{{name}}"></a>
 								<!-- <a href="/shop-single"><img src="" alt="{{name}}"></a> -->
 								<div class="product-overlay">
-									<a href="#" class="add-to-cart" style="width:100%"><i class="icon-shopping-cart"></i><span> Add to Cart</span></a>
+									<a href="/shop-item/{{name}}" class="add-to-cart" style="width:100%"><i class="icon-shopping-cart"></i><span> Add to Cart</span></a>
 									<!-- <a href="include/ajax/shop-item.html" class="item-quick-view" data-lightbox="ajax"><i class="icon-zoom-in2"></i><span> Quick View</span></a> -->
 								</div>
 							</div>
