--- a/public/css/colors.css
+++ b/public/css/colors.css
@@ -60,7 +60,7 @@ h6 > span:not(.nocolor):not(.badge),
 .page-link:focus,
 .dark .post-timeline .entry:hover .entry-timeline,
 .dark .post-timeline .entry:hover .timeline-divider,
-.clear-rating-active:hover { color: #2e8ece; }
+.clear-rating-active:hover { color: black; }
 
 .color,
 .top-cart-item-desc a:hover,
