added cart to sessionVariables

--- a/public/css/colors.css
+++ b/public/css/colors.css
@@ -5,11 +5,11 @@
 -----------------------------------------------------------------*/
 
 
-::selection { background: #2e8ece; }
+::selection { background: black; }
 
-::-moz-selection { background: #2e8ece; }
+::-moz-selection { background: black; }
 
-::-webkit-selection { background: #2e8ece; }
+::-webkit-selection { background: black; }
 
 
 a,
@@ -75,7 +75,7 @@ h6 > span:not(.nocolor):not(.badge),
 .overlay-menu #primary-menu.dark > ul > li.current > a,
 .nav-tree li:hover > a,
 .nav-tree li.current > a,
-.nav-tree li.active > a { color: #2e8ece !important; }
+.nav-tree li.active > a { color: black !important; }
 
 #primary-menu.style-3 > ul > li.current > a,
 #primary-menu.sub-title > ul > li:hover > a,
@@ -133,7 +133,7 @@ input.switch-toggle-flat:checked + label:after,
 input.switch-toggle-round:checked + label:before,
 .bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-themecolor,
 .bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-themecolor,
-.entry:after { background-color: #2e8ece; }
+.entry:after { background-color: black; }
 
 .bgcolor,
 .button.button-3d:not(.button-white):not(.button-dark):not(.button-border):not(.button-black):not(.button-red):not(.button-teal):not(.button-yellow):not(.button-green):not(.button-brown):not(.button-aqua):not(.button-purple):not(.button-leaf):not(.button-pink):not(.button-blue):not(.button-dirtygreen):not(.button-amber):not(.button-lime):hover,
@@ -144,7 +144,7 @@ input.switch-toggle-round:checked + label:before,
 .owl-carousel .owl-nav [class*=owl-]:hover,
 .page-link,
 .page-link:hover,
-.page-link:focus { background-color: #2e8ece !important; }
+.page-link:focus { background-color: black !important; }
 
 #primary-menu.style-4 > ul > li:hover > a,
 #primary-menu.style-4 > ul > li.current > a,
@@ -159,7 +159,7 @@ input.switch-toggle-round:checked + label:before,
 .dark .post-timeline .entry:hover .entry-timeline,
 .dark .post-timeline .entry:hover .timeline-divider,
 .dark .cart-product-thumbnail img:hover,
-.heading-block.border-color:after { border-color: #2e8ece; }
+.heading-block.border-color:after { border-color: black; }
 
 .top-links ul ul,
 .top-links ul div.top-link-section,
@@ -179,12 +179,12 @@ input.switch-toggle-round:checked + label:before,
 .tabs.tabs-tb ul.tab-nav li.ui-tabs-active a,
 .irs-from:after,
 .irs-single:after,
-.irs-to:after { border-top-color: #2e8ece; }
+.irs-to:after { border-top-color: black; }
 
 #page-menu.dots-menu nav li div:after,
-.title-block { border-left-color: #2e8ece; }
+.title-block { border-left-color: black; }
 
-.title-block-right { border-right-color: #2e8ece; }
+.title-block-right { border-right-color: black; }
 
 .fancy-title.title-bottom-border h1,
 .fancy-title.title-bottom-border h2,
@@ -193,7 +193,7 @@ input.switch-toggle-round:checked + label:before,
 .fancy-title.title-bottom-border h5,
 .fancy-title.title-bottom-border h6,
 .more-link,
-.tabs.tabs-bb ul.tab-nav li.ui-tabs-active a { border-bottom-color: #2e8ece; }
+.tabs.tabs-bb ul.tab-nav li.ui-tabs-active a { border-bottom-color: black; }
 
 .border-color,
 .process-steps li.active a,
@@ -201,15 +201,15 @@ input.switch-toggle-round:checked + label:before,
 .tagcloud a:hover,
 .page-link,
 .page-link:hover,
-.page-link:focus { border-color: #2e8ece !important; }
+.page-link:focus { border-color: black !important; }
 
 .fbox-effect.fbox-dark .fbox-icon i:after,
-.dark .fbox-effect.fbox-dark .fbox-icon i:after { box-shadow: 0 0 0 2px #2e8ece; }
+.dark .fbox-effect.fbox-dark .fbox-icon i:after { box-shadow: 0 0 0 2px black; }
 
 .fbox-border.fbox-effect.fbox-dark .fbox-icon i:hover,
 .fbox-border.fbox-effect.fbox-dark:hover .fbox-icon i,
 .dark .fbox-border.fbox-effect.fbox-dark .fbox-icon i:hover,
-.dark .fbox-border.fbox-effect.fbox-dark:hover .fbox-icon i { box-shadow: 0 0 0 1px #2e8ece; }
+.dark .fbox-border.fbox-effect.fbox-dark:hover .fbox-icon i { box-shadow: 0 0 0 1px black; }
 
 
 @media only screen and (max-width: 991px) {
@@ -220,15 +220,15 @@ input.switch-toggle-round:checked + label:before,
 	body:not(.dark) #header:not(.dark) #header-wrap:not(.dark) #primary-menu > div > ul > li.current a,
 	#primary-menu ul ul li:hover > a,
 	#primary-menu ul li .mega-menu-content.style-2 > ul > li.mega-menu-title:hover > a,
-	#primary-menu ul li .mega-menu-content.style-2 > ul > li.mega-menu-title > a:hover { color: #2e8ece !important; }
+	#primary-menu ul li .mega-menu-content.style-2 > ul > li.mega-menu-title > a:hover { color: black !important; }
 
-	#page-menu nav { background-color: #2e8ece; }
+	#page-menu nav { background-color: black; }
 
 }
 
 
 @media only screen and (max-width: 767px) {
 
-	.portfolio-filter li a:hover { color: #2e8ece; }
+	.portfolio-filter li a:hover { color: black; }
 
 }
