--- a/views/cart.mustache
+++ b/views/cart.mustache
@@ -139,7 +139,6 @@
 												</div>
 											</div>
 											<div class="col-lg-8 col-8 nopadding">
-												<a href="#" class="button button-3d nomargin fright">Update Cart</a>
 												<a href="shop.html" class="button button-3d notopmargin fright">Proceed to Checkout</a>
 											</div>
 										</div>
@@ -164,12 +163,12 @@
 
   	<!-- External JavaScripts
   	============================================= -->
-  	<script src="js/jquery.js"></script>
-  	<script src="js/plugins.js"></script>
+  	<script src="/js/jquery.js"></script>
+  	<script src="/js/plugins.js"></script>
 
   	<!-- Footer Scripts
   	============================================= -->
-  	<script src="js/functions.js"></script>
+  	<script src="/js/functions.js"></script>
   	<!-- <script src='js/navTransition.js'></script> -->
   </body>
   </html>
