fixed slideshow (broke w previous commit)

--- a/views/contact.mustache
+++ b/views/contact.mustache
@@ -71,12 +71,12 @@
               <input type="text" id="botcheck" name="botcheck" value="" class="sm-form-control" />
             </div>
 
-            <!-- <div class="col_full">
+            <div class="col_full">
 
               <script src="https://www.google.com/recaptcha/api.js" async defer></script>
               <div class="g-recaptcha" data-sitekey="6LfijgUTAAAAACPt-XfRbQszAKAJY0yZDjjhMUQT"></div>
 
-            </div> -->
+            </div>
 
             <div class="col_full">
               <button class="button nomargin custom-page-banner" type="submit" id="template-contactform-submit" name="contact" value="submit">Send Message</button>
