fixed shop-item fade in (unclosed tag)

--- a/views/shop-item.mustache
+++ b/views/shop-item.mustache
@@ -16,12 +16,12 @@
 						<img style="margin:5px;"src="/images/icons/submenu.png" /><span>{{name}}</span>
 					</div>
 					<a href="/cart"><i class="icon-shopping-cart right custom-cart"></i></a>
-				 </div>
-				</div>
+			 </div>
 			</div>
 		</div>
 
-    <section id="content" style="background:#f9f9f9">
+
+    <section id="content" style="background: #e9e9e9">
       <div class="content-wrap">
         <div class="container clearfix">
           <div class="single-product">
