--- a/views/shop.mustache
+++ b/views/shop.mustache
@@ -18,7 +18,7 @@
 			</div>
 		</div>
 
-    <section id="content" style="background:#f9f9f9">
+    <section id="content" style="background:#e9e9e9">
 
 			<div class="content-wrap">
 
