--- a/views/partials/head.mustache
+++ b/views/partials/head.mustache
@@ -6,7 +6,17 @@
 	<!-- Stylesheets
 	============================================= -->
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Raleway:300,400,500,600,700|Crete+Round:400i" rel="stylesheet" type="text/css" />
-	<link rel="stylesheet" href="/build/css/style.min.css" />
+	<!-- <link rel="stylesheet" href="/build/css/style.min.css" /> -->
+	<link rel="stylesheet" href="/css/bootstrap.css"  />
+	<link rel="stylesheet" href="/style.css"  />
+	<link rel="stylesheet" href="/css/swiper.css"  />
+	<link rel="stylesheet" href="/css/dark.css"  />
+	<link rel="stylesheet" href="/css/font-icons.css"  />
+	<link rel="stylesheet" href="/css/animate.css"  />
+	<link rel="stylesheet" href="/css/magnific-popup.css"  />
+	<link rel="stylesheet" href="/css/custom.css"  />
+	<link rel="stylesheet" href="/css/responsive.css"  />
+	<link rel="stylesheet" href="/css/shop.css"  />
 	<link href="https://fonts.googleapis.com/css?family=Megrim" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
