--- a/views/shop.mustache
+++ b/views/shop.mustache
@@ -18,7 +18,7 @@
 			</div>
 		</div>
 
-    <section id="content" style="background:#e9e9e9">
+    <section id="content" style="background:#fafafa">
 
 			<div class="content-wrap">
 
@@ -29,7 +29,7 @@
 					<div id="shop" class="shop grid-container clearfix" data-layout="fitRows">
 					{{#prints}}
 						<div class="product clearfix">
-							<div class="product-image">
+							<div class="product-image custom-shadow">
 								<a href="/shop-item/{{name}}"><img src="/art_imgs/prints/{{image1}}" alt="{{name}}"></a>
 								<div class="product-overlay">
 									<a id={{id}} class="add-to-cart" style="width:100%"><i class="icon-shopping-cart"></i><span> Add to Cart</span></a>
